--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,18 +1,30 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title>
-            Ionic Blank
-        </ion-title>
-    </ion-toolbar>
-</ion-header>
+<!--<ion-header>-->
+    <!--<ion-toolbar>-->
+        <!--<ion-title color="white">-->
+            <!--Office managment app-->
+        <!--</ion-title>-->
+    <!--</ion-toolbar>-->
+<!--</ion-header>-->
 
-<ion-content padding>
-    <ion-list>
-        <ion-item-sliding *ngFor="let link of listOfButtons">
-            <ion-item [href]="'/' + link" routerDirection="forward">
-                <ion-label>{{link}}</ion-label>
-            </ion-item>
-        </ion-item-sliding>
-    </ion-list>
-
-</ion-content>
+<!--<ion-content padding>-->
+    <!--&lt;!&ndash;<ion-list>&ndash;&gt;-->
+        <!--&lt;!&ndash;<ion-item-sliding *ngFor="let link of listOfButtons">&ndash;&gt;-->
+            <!--&lt;!&ndash;<ion-item [href]="'/' + link" routerDirection="forward">&ndash;&gt;-->
+                <!--&lt;!&ndash;<ion-label>{{link}}</ion-label>&ndash;&gt;-->
+            <!--&lt;!&ndash;</ion-item>&ndash;&gt;-->
+        <!--&lt;!&ndash;</ion-item-sliding>&ndash;&gt;-->
+    <!--&lt;!&ndash;</ion-list>&ndash;&gt;-->
+    <!--<div class="logo-container">-->
+        <!--<img class="wallet-logo" src="../../assets/icon/wallet.svg" alt="" />-->
+    <!--</div>-->
+    <!--<ion-fab vertical="center" horizontal="center" slot="fixed">-->
+        <!--<ion-fab-button class="start-btn" (click)="pressStart()">-->
+            <!--Start-->
+        <!--</ion-fab-button>-->
+    <!--</ion-fab>-->
+    <!--<section class="bottom-buttons">-->
+        <!--<ion-item text-center>-->
+            <!--<ion-label color="white" (click)="testLogin()">Test login</ion-label>-->
+        <!--</ion-item>-->
+    <!--</section>-->
+<!--</ion-content>-->
