--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,66 +1,70 @@
+:host {
+  --ion-toolbar-background-color: #383840;
+  --size: 20px;
+  --ion-fab-button-size: 20px;
+}
+:root {
+  --size: 20px;
+}
+ion-header {
+  ion-toolbar {
+    .toolbar-container {
+      ion-title{
+        font-weight: 500;
+        text-align: left!important;
+      }
+    }
+    ion-item {
+    }
+  }
+}
 
-
-  .scroll-content {
+ion-content {
+  background-color: #33333D;
+  .logo-container {
+    height:50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    .wallet-logo {
+      width: 40vh;
+    }
   }
-
-  #bars {
-    //height: 80%;
-    margin-left: 50%;
-    .cls-1 {
-      opacity: 0;
-      transform: rotate3d(1, 1, 0, 50deg);
-      animation: 1s 0.2s ease fadeInAndSpin;
-      animation-fill-mode: forwards;
-
+  ion-fab {
+    margin-top: 10vh;
+    .start-btn {
+      --size: 20vh;
+      --background: #F9AA33;
+      font-size: 30px;
+      font-weight: bold;
+      width: var(--size);
+      height: var(--size);
+      border-radius: 50%;
+      position: relative;
+      #shadow-root {
+        button {
+          border:1px solid red;
+          z-index: 88888;
+        }
+      }
     }
-
-    .cls-2 {
-      opacity: 0;
-      transform: rotate3d(1, 1, 0, 50deg);
-      animation: 1s 0.4s ease fadeInAndSpin;
-      animation-fill-mode: forwards;
-    }
-
-    .cls-3 {
-      opacity: 0;
-      transform: rotate3d(1, 1, 0, 50deg);
-      animation: 1s 0.6s ease fadeInAndSpin;
-      animation-fill-mode: forwards;
-    }
-
-    .cls-4 {
-      opacity: 0;
-      transform: rotate3d(1, 1, 0, 50deg);
-      animation: 1s 0.8s ease fadeInAndSpin;
-      animation-fill-mode: forwards;
-    }
-
-    .cls-5, .cls-6 {
-      opacity: 0;
-      animation: 2s 1.5s linear fadeIn;
-      animation-fill-mode: forwards;
-    }
-
   }
+  .bottom-buttons {
+    margin-top: 30vh;
+  }
+}
 
-
-//@keyframes fadeInAndSpin {
-//
-//  100% {
-//    opacity: 1;
-//    transform: rotate3d(1, 1, 0, 0deg);
-//  }
-//
-//}
-//
-//@keyframes fadeIn {
-//
-//  100% {
-//    opacity: 1;
-//  }
-//
-//}
-
+@keyframes pulse {
+  0% {
+    box-shadow: 0 0 0 0 rgba(204,169,44, 0.4);
+    //--size: 30vh
+  }
+  70% {
+    box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+    //--size: 10vh
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    //--size: 20vh
+  }
+}
