--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,13 +1,8 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-buttons slot="start">
-            <ion-back-button></ion-back-button>
-        </ion-buttons>
-        <ion-title text-left color="white">Register</ion-title>
-    </ion-toolbar>
-</ion-header>
-
 <ion-content padding>
+    <ion-title text-center>
+        <div>Office</div>
+        <div>Management</div>
+    </ion-title>
     <ion-list>
         <form [formGroup]="regform">
             <div class="input-container">
@@ -55,23 +50,27 @@
                     </ion-col>
                 </ion-row>
             </div>
+            <!--<ion-item class="submit-btn-container">-->
+                <!--<ion-button-->
+                        <!--slot="" size="normal"-->
+                        <!--class="submit-btn"-->
+                        <!--color="primary"-->
+                        <!--(click)="submitRegister()"-->
+                        <!--[disabled]="!regform.valid"-->
+                        <!--color="orange">-->
+                    <!--Submit-->
+                <!--</ion-button>-->
+            <!--</ion-item>-->
             <ion-item class="submit-btn-container">
-                <ion-grid>
-                    <ion-row justify-content-center>
-                        <ion-col size="12">
-                            <ion-button
-                                    slot="" size="normal"
-                                    class="submit-btn ion-col-3"
-                                    color="primary"
-                                    (click)="submitRegister()"
-                                    [disabled]="!regform.valid"
-                                    color="orange">
-                                Submit
-                            </ion-button>
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
+                <ion-button slot="" size="normal" class="submit-btn ion-col-3" expand="block" no-padding
+                            (click)="submitRegister()" color="orange" [disabled]="!regform.valid">Create account
+                </ion-button>
             </ion-item>
         </form>
     </ion-list>
+    <section class="bottom-buttons">
+        <ion-item [href]="'/login'" routerDirection="forward" text-center>
+            <ion-label color="white">Already have one? Sign in</ion-label>
+        </ion-item>
+    </section>
 </ion-content>
