--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,10 +1,8 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title color="white" text-left>Login</ion-title>
-    </ion-toolbar>
-</ion-header>
-
 <ion-content padding>
+    <ion-title text-center>
+        <div>Office</div>
+        <div>Management</div>
+    </ion-title>
     <ion-list>
         <form [formGroup]="loginForm">
             <div class="input-container">
@@ -25,25 +23,22 @@
                     <span class="error-msg">{{ getErrorMessage('password') }}</span>
                 </ion-col>
             </div>
+            <ion-item [href]="'/forgot'" routerDirection="forward" text-center class="forgot-btn">
+                <ion-label color="white">Forgot password?</ion-label>
+            </ion-item>
             <ion-item class="submit-btn-container">
-                <ion-grid>
-                    <ion-row justify-content-center>
-                        <ion-col size="12">
-                            <ion-button slot="" size="normal" class="submit-btn ion-col-3"
-                                        (click)="submitLogin()" color="orange" [disabled]="!loginForm.valid">Submit
-                            </ion-button>
-                        </ion-col>
-                    </ion-row>
-                </ion-grid>
+                <ion-button slot="" size="normal" class="submit-btn ion-col-3" expand="block" no-padding
+                            (click)="submitLogin()" color="orange" [disabled]="!loginForm.valid">Login
+                </ion-button>
             </ion-item>
         </form>
     </ion-list>
     <section class="bottom-buttons">
         <ion-item [href]="'/register'" routerDirection="forward" text-center>
-            <ion-label color="white">Register</ion-label>
-        </ion-item>
-        <ion-item [href]="'/forgot'" routerDirection="forward" text-center>
-            <ion-label color="white">Forgot password</ion-label>
+            <ion-label color="white">Have no account yet?</ion-label>
         </ion-item>
     </section>
+    <ion-item text-center>
+    <ion-label color="white" (click)="submitLogin('loxley.gabryel@lnvoke.net','111111')">Test login</ion-label>
+    </ion-item>
 </ion-content>
