--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -14,6 +14,14 @@ ion-header {
   }
 }
 ion-content {
+  ion-title {
+    margin: 10vh 0;
+    color: #fff;
+    font-size: 5vh;
+    div {
+      margin:10px 0;
+    }
+  }
   section {
     padding-bottom: 0;
   }
@@ -25,7 +33,7 @@ ion-content {
       ion-item {
         background: #33333D;
         color: #fff;
-        border-bottom: 1px solid #fff;
+        border: 1px solid #fff;
       }
     }
     .alert {
@@ -36,13 +44,34 @@ ion-content {
     color: #fff;
     font-weight: 700;
   }
+  .forgot-btn {
+    font-size: 12px;
+    margin: -50px -15px 20px 0;
+    ion-label {
+      text-align: right;
+    }
+  }
 }
 .input-container {
   height: 15vh;
 }
 .bottom-buttons {
   margin-top: 10vh;
-  ion-label {
-    text-decoration: underline;
+  ion-item {
+    margin-top:-10vh;
+    ion-label {
+      font-size: 12px;
+    }
   }
+}
+.submit-btn-container {
+  margin-left: -15px;
+  width: 55vh;
+  ion-button {
+    --border-radius: 8px;
+    --height: 8vh;
+  }
+}
+ion-button {
+  width: 100%;
 }
