--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -85,5 +85,6 @@
                 <ion-icon name="search"></ion-icon>
             </ion-button>
         </ion-buttons>
+        <span (click)="f1()">qqq</span>
     </ion-toolbar>
 </ion-footer>
